kube/aeacus/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app.kubernetes.io/service: headscale
    app.kubernetes.io/instance: headscale
    app.kubernetes.io/name: headscale
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: metrics
      protocol: TCP
      name: metrics
    - port: 50443
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/instance: headscale
    app.kubernetes.io/name: headscale
