kube/aeacus/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: headscale
  labels:
    app.kubernetes.io/instance: headscale
    app.kubernetes.io/name: headscale
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "hs.xeserv.us"
      secretName: hs-xeserv-us-tls
  rules:
    - host: "hs.xeserv.us"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: headscale
                port:
                  number: 8000
